# Auto-claimer

./: Cargo.toml  README.md
src/: main.rs
