[package]
name = "linea-autoclaim"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2", features = ["abigen", "rustls", "ws"] }
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
zeroize = "1"
hex = "0.4"
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
eframe = "0.27"
